# store

./: .gitignore  Cargo.toml  README.md
.github/workflows/: nightly-build.yml
config/: store.ini
db/: data.sql  schema.sql
src/: admin.rs  auth.rs  cart.rs  checkout.rs  main.rs  mod.rs  models.rs  notifications.rs  products.rs  setup.rs  shortcodes.rs  types.rs  utils.rs
src/admin/: categories.rs  media.rs  products.rs  types.rs  users.rs
src/admin/products/: common.old  media.old  media.rs
src/controllers/: admin.rs  auth.rs  mod.rs  storefront.rs
src/controllers/backend/: categories.rs  media.rs  mod.rs  orders.rs  products.rs  users.rs
src/controllers/frontend/: cart.rs  checkout.rs  mod.rs  products.rs  shortcodes.rs
src/models/: backend.rs  cart.rs  categories.rs  frontend.rs  media.rs  mod.rs  orders.rs  products.rs  shipping.rs  tags.rs  tokens.rs  users.rs
static/: test.html
static/assets/css/: admin.css  backend.css  frontend.css  store.css
static/assets/js/: fragments.js  shortcodes.js
templates/: facade.html  list_products.html  login.html  shopping.html  single_product.html
templates/admin/: admin.html  media.html
templates/admin/partials/: head.html  product.html  products.html  topbar.html
templates/backend/: admin.html  macros.html  media.html
templates/backend/partials/: categories.html  category.html  dashboard.html  head.html  media.html  orders.html  product.html  products.html  sidebar.html  topbar.html  users.html
templates/frontend/: facade.html  product.html  products.html  shopping.html
templates/frontend/partials/: cart.html  checkout.html  footer.html  header.html  order_details.html
templates/partials/: checkout.html  footer.html
templates/shortcodes/: products.html
